{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "5c7704b4-2faf-4597-8424-6b7466491646",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "485f9f99-f4bb-4b2e-8fd6-cba5ca4a5c4d",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ee75412b-433b-440f-878b-8521c7648eb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fish",
                    "type": "Button",
                    "id": "c09e34db-b8d6-4b42-928a-55440599e612",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "d106ff63-2861-40a5-aa16-d50e70023a5d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD Movement",
                    "id": "7dccce11-533a-4cb5-90e2-502b024c4541",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2497c9ed-752b-4203-9a77-e8ab519d5a1e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "909190fd-b970-490a-ad91-6a2370725838",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6ad54b3a-cec2-44f9-b817-58b769566ef6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1034cd49-cbe1-4c03-ab52-1a1fd1c25ceb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "JoystickMovementControl",
                    "id": "8944e886-4157-48b0-ae29-ff067f72adb7",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "74a1408f-d9ca-431d-933c-2aee651fc6ee",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "830baeb6-f7b9-4a0d-8165-8686bb599106",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f0334a03-cf55-44e1-bcbe-9ecea2e21d21",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3f60fc81-fcfb-4efe-ab1e-a4d19cd4d248",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "896f1771-6838-44b3-bf94-04a6a9d31f8b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7827604e-eedc-4870-bc85-302cd30bd69c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57678aac-1c69-4440-90d4-3a0ee6223073",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4181f59-9ae2-4be0-8674-9126aa610de9",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Fish",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15ac7be6-3bc0-4b21-8e24-8b75dba6c3d3",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Fish",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "JoystickCameraControl",
                    "id": "6ea73e3d-ae6f-4e3d-ba9c-4fccd9b32a68",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "ScaleVector2(x=100,y=100)",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9f9f3415-3203-4dbc-b22e-fa04f39be698",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3fe6bc4f-f20b-4be3-855f-c4f2d031c24d",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1238735f-08dc-47da-82e3-032232bda497",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3575f489-058f-4742-a0ed-a3dabee981dc",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0149d2b9-495f-4ae2-8d98-05af0322d1fc",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=10,y=10)",
                    "groups": "Keyboard&Mouse",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Fishing",
            "id": "197a8370-daa3-49a9-b2c6-03f3e82dd6f1",
            "actions": [
                {
                    "name": "FishingGo",
                    "type": "Button",
                    "id": "3fca264e-a3d6-42c5-8b41-1318610a376d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "FishingMovement",
                    "type": "Value",
                    "id": "fc23e814-32ff-46af-82a1-05db71e8344e",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "CancelFishing",
                    "type": "Button",
                    "id": "23c281a8-3133-42e1-9767-22bd0fd2cb18",
                    "expectedControlType": "Button",
                    "processors": "StickDeadzone",
                    "interactions": ""
                },
                {
                    "name": "AimingControl",
                    "type": "Value",
                    "id": "1c95fbb3-a2b8-4a62-ac46-2d55af7c9e78",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "861bc00a-17a8-407a-98cf-6ae47004ef63",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FishingGo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e0bbcb4-12b7-457b-9002-8da6b78c18a8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FishingGo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD Movement",
                    "id": "02f6b450-4b9d-46d0-a35e-6c00850b89b9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FishingMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a728b343-0c35-4793-ac9b-88bd93bc0595",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f69c5088-f4e2-42a1-8350-e0651dc92485",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9f90d2f7-ea41-4818-958d-a81e99e510d5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7a556359-a53a-469e-a136-d14dd651a262",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "JoystickMovementControl",
                    "id": "acd2300e-5716-4107-9753-bf195dfc57e0",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "AxisDeadzone,Normalize(max=1)",
                    "groups": "",
                    "action": "FishingMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "38661884-6d13-43d5-af4f-5e7b22cab63a",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8bdbe48a-b450-46bc-ab04-3c4997b80223",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2b39c5e2-17af-4264-af3d-e2eaae7aa1f9",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dc045695-436f-4dec-8824-233d40dce091",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "FishingMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "79598e50-91c3-4c69-a2a6-c651b7e67d05",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "CancelFishing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62b52ee4-9d47-4daa-915a-a88b6a90c41a",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "CancelFishing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "JoystickMovementControl",
                    "id": "6b2c48cd-128f-4115-92f1-59618eb41340",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "AxisDeadzone,Normalize(max=1)",
                    "groups": "",
                    "action": "AimingControl",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ed8b9f80-16cd-499a-b6b7-a250c92a0101",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AimingControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e315066f-6ec1-4f67-9641-6c8ec7e3efad",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AimingControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "00ff4b24-e083-4524-bb71-0a984e7bd820",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AimingControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ab3632a6-e5d6-450a-b9b9-5cf1acff2a19",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AimingControl",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3c2ed27f-cc2d-45e7-b475-e8c233d3dd99",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "ScaleVector2(x=10,y=10)",
                    "groups": "Keyboard&Mouse",
                    "action": "AimingControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}